--- a/cards.ini
+++ b/cards.ini
@@ -4,3 +4,25 @@ MaxSearches = 3
 [Aliases] # Search is case-insensitive, use the full card name to resolve to.
 baby = Symmetrical Visage
 the best bot = Jeeves Model Bioroids
+pancakes = Adjusted Chronotype
+spider = Anansi
+tamijo = Stimhack
+cell phone man = Underworld Contact
+andy = Andromeda: Dispossessed Ristie
+soccer mom = Sunny Lebeau: Security Specialist
+sunny = Sunny Lebeau: Security Specialist
+ctm = NBN: Controlling the Message
+ig = Industrial Genomics: Growing Solutions
+etf = Haas-Bioroid: Engineering the Future
+ci = Cerebral Imaging: Infinite Frontiers
+pu = Jinteki: Potential Unleashed
+potatoes = Jinteki: Potential Unleashed
+pe = Jinteki: Personal Evolution
+black tree = Jinteki: Personal Evolution
+rp = Jinteki: Replicating Perfection
+whte tree = Jinteki: Replicating Perfection
+babw = Weyland Consortium: Building a Better World
+neh = https://netrunnerdb.com/en/card/06005
+bon = Weyland Consortium: Builder of Nations
+aot = Haas-Bioroid: Architects of Tomorrow
+dj = DJ Fenris
