--- a/cards.ini
+++ b/cards.ini
@@ -10,7 +10,6 @@ tamijo = Stimhack
 cell phone man = Underworld Contact
 andy = Andromeda: Dispossessed Ristie
 soccer mom = Sunny Lebeau: Security Specialist
-sunny = Sunny Lebeau: Security Specialist
 ctm = NBN: Controlling the Message
 ig = Industrial Genomics: Growing Solutions
 etf = Haas-Bioroid: Engineering the Future
@@ -22,7 +21,7 @@ black tree = Jinteki: Personal Evolution
 rp = Jinteki: Replicating Perfection
 whte tree = Jinteki: Replicating Perfection
 babw = Weyland Consortium: Building a Better World
-neh = https://netrunnerdb.com/en/card/06005
+neh = Near-Earth Hub: Broadcast Center
 bon = Weyland Consortium: Builder of Nations
 aot = Haas-Bioroid: Architects of Tomorrow
 dj = DJ Fenris
