--- a/cards.ini
+++ b/cards.ini
@@ -10,6 +10,7 @@ tamijo = Stimhack
 cell phone man = Underworld Contact
 andy = Andromeda: Dispossessed Ristie
 soccer mom = Sunny Lebeau: Security Specialist
+val = Valencia Estevez: The Angel of Cayambe
 ctm = NBN: Controlling the Message
 ig = Industrial Genomics: Growing Solutions
 etf = Haas-Bioroid: Engineering the Future
@@ -19,9 +20,20 @@ potatoes = Jinteki: Potential Unleashed
 pe = Jinteki: Personal Evolution
 black tree = Jinteki: Personal Evolution
 rp = Jinteki: Replicating Perfection
-whte tree = Jinteki: Replicating Perfection
+white tree = Jinteki: Replicating Perfection
 babw = Weyland Consortium: Building a Better World
 neh = Near-Earth Hub: Broadcast Center
 bon = Weyland Consortium: Builder of Nations
 aot = Haas-Bioroid: Architects of Tomorrow
 dj = DJ Fenris
+clippy = Paperclip
+gfi = Global Food Initiative
+bo = Black Orchestra
+smc = Self-modifying Code
+cc = Clone Chip
+green ball = Rezeki
+ftt = Find the Truth
+abr = Always Be Running
+turtle = Aumakua
+hhn = Hard-Hitting News
+aoycr = An Offer You Can't Refuse
