--- a/cards.ini
+++ b/cards.ini
@@ -8,6 +8,7 @@ pancakes = Adjusted Chronotype
 spider = Anansi
 tamijo = Stimhack
 cell phone man = Underworld Contact
+val = Valencia Estevez: The Angel of Cayambe
 andy = Andromeda: Dispossessed Ristie
 soccer mom = Sunny Lebeau: Security Specialist
 ctm = NBN: Controlling the Message
@@ -19,9 +20,21 @@ potatoes = Jinteki: Potential Unleashed
 pe = Jinteki: Personal Evolution
 black tree = Jinteki: Personal Evolution
 rp = Jinteki: Replicating Perfection
-whte tree = Jinteki: Replicating Perfection
+white tree = Jinteki: Replicating Perfection
 babw = Weyland Consortium: Building a Better World
 neh = Near-Earth Hub: Broadcast Center
 bon = Weyland Consortium: Builder of Nations
 aot = Haas-Bioroid: Architects of Tomorrow
 dj = DJ Fenris
+clippy = Paperclip
+gfi = Global Food Initiative
+bo = Black Orchestra
+smc = Self-modifying Code
+cc = Clone Chip
+green ball = Rezeki
+ftt = Find the Truth
+abr = Always Be Running
+turtle = Aumakua
+hhn = Hard-Hitting News
+aoycr = An Offer You Can't Refuse
+bitcoin = TGTBT
