--- a/cards.ini
+++ b/cards.ini
@@ -8,6 +8,9 @@ pancakes = Adjusted Chronotype
 spider = Anansi
 tamijo = Stimhack
 cell phone man = Underworld Contact
+mister phones = Underworld Contact
+mr phones = Underworld Contact
+mr. phones = Underworld Contact
 val = Valencia Estevez: The Angel of Cayambe
 andy = Andromeda: Dispossessed Ristie
 soccer mom = Sunny Lebeau: Security Specialist
@@ -21,6 +24,8 @@ pe = Jinteki: Personal Evolution
 black tree = Jinteki: Personal Evolution
 rp = Jinteki: Replicating Perfection
 white tree = Jinteki: Replicating Perfection
+red tree = Mti Mwekundu: Life Improved
+red black tree = Mti Mwekundu: Life Improved
 babw = Weyland Consortium: Building a Better World
 neh = Near-Earth Hub: Broadcast Center
 bon = Weyland Consortium: Builder of Nations
@@ -38,3 +43,4 @@ turtle = Aumakua
 hhn = Hard-Hitting News
 aoycr = An Offer You Can't Refuse
 bitcoin = TGTBT
+unsure gamble = Falsified Credentials
