--- a/cards.ini
+++ b/cards.ini
@@ -44,3 +44,6 @@ hhn = Hard-Hitting News
 aoycr = An Offer You Can't Refuse
 bitcoin = TGTBT
 unsure gamble = Falsified Credentials
+j-how = Jackson Howard
+j how = Jackson Howard
+our lord and savior = Jackson Howard
