--- a/cards.ini
+++ b/cards.ini
@@ -47,3 +47,4 @@ unsure gamble = Falsified Credentials
 j-how = Jackson Howard
 j how = Jackson Howard
 our lord and savior = Jackson Howard
+pizza field = Giordano Memorial Field
