--- a/cards.ini
+++ b/cards.ini
@@ -48,3 +48,4 @@ j-how = Jackson Howard
 j how = Jackson Howard
 our lord and savior = Jackson Howard
 pizza field = Giordano Memorial Field
+nre = Net-Ready Eyes
