--- a/cards.ini
+++ b/cards.ini
@@ -49,3 +49,18 @@ j how = Jackson Howard
 our lord and savior = Jackson Howard
 pizza field = Giordano Memorial Field
 nre = Net-Ready Eyes
+rpc = Red Planet Couriers
+piggy bank = Bankroll
+flowers for = Algernon
+hail = Hydra
+free willy = Darwin
+ttw = The Turning Wheel
+sauron = Hunter
+darude = Sand Storm
+hoot = Owl
+piot = Peace in Our Time
+nice car = Sports Hopper
+folding at home = Data Folding
+gun = Unregistered S&W '35
+pistol = Unregistered S&W '35
+catch me if you can = Gingerbread
