--- a/cards.ini
+++ b/cards.ini
@@ -64,3 +64,4 @@ folding at home = Data Folding
 gun = Unregistered S&W '35
 pistol = Unregistered S&W '35
 catch me if you can = Gingerbread
+twitch.tv = Daily Casts
