--- a/cards.ini
+++ b/cards.ini
@@ -65,3 +65,10 @@ gun = Unregistered S&W '35
 pistol = Unregistered S&W '35
 catch me if you can = Gingerbread
 twitch.tv = Daily Casts
+hart = Harmony AR Therapy
+tca = The Class Act
+overwatch = Loot Box
+netflix = Tiered Subscription
+wow = Daily Quest
+boxer girl = Leela Patel: Trained Pragmatist
+proco = Professional Contacts
