--- a/cards.ini
+++ b/cards.ini
@@ -72,3 +72,4 @@ netflix = Tiered Subscription
 wow = Daily Quest
 boxer girl = Leela Patel: Trained Pragmatist
 proco = Professional Contacts
+mother brain = Ikawah Project
