--- a/cards.ini
+++ b/cards.ini
@@ -73,3 +73,6 @@ wow = Daily Quest
 boxer girl = Leela Patel: Trained Pragmatist
 proco = Professional Contacts
 mother brain = Ikawah Project
+hpt = High-Profile Target
+yogurt = Economic Warfare
+rebecca = Friday Chip
