--- a/cards.ini
+++ b/cards.ini
@@ -76,3 +76,13 @@ mother brain = Ikawah Project
 hpt = High-Profile Target
 yogurt = Economic Warfare
 rebecca = Friday Chip
+doof = Diversion of Funds
+fugu = Puffer
+knock knock = No One Home
+just in time = Compile
+godzilla = Gbahali
+mopus = Magnum Opus
+saccon = Sacrificial Construct
+tb = Tollbooth
+petty = Punitive Counterstrike
+sft = Successful Field Test
