--- a/cards.ini
+++ b/cards.ini
@@ -60,6 +60,7 @@ darude = Sand Storm
 hoot = Owl
 piot = Peace in Our Time
 nice car = Sports Hopper
+sweet car = Advanced Concept Hopper
 folding at home = Data Folding
 gun = Unregistered S&W '35
 pistol = Unregistered S&W '35
@@ -86,3 +87,13 @@ saccon = Sacrificial Construct
 tb = Tollbooth
 petty = Punitive Counterstrike
 sft = Successful Field Test
+unlearn what you have learned = Reeducation
+loan sharks = Dadiana Chacon
+snp = Na'Not'K
+sodium not potassium = Na'Not'K
+cowabunga = Surfer
+nice moustache = Hernando Cortez
+bong = Cold Read
+911 = First Responders
+bollywood = Sensie Actors Union
+david blaine = Street Magic
