--- a/cards.ini
+++ b/cards.ini
@@ -83,3 +83,4 @@ sodium not potassium = Na'Not'K
 cowabunga = Surfer
 nice moustache = Hernando Cortez
 david blaine = Street Magic
+ares = AR-Enhanced Security
