Update cards.ini (#7)
* Update cards.ini

--- a/cards.ini
+++ b/cards.ini
@@ -49,3 +49,38 @@ j how = Jackson Howard
 our lord and savior = Jackson Howard
 pizza field = Giordano Memorial Field
 nre = Net-Ready Eyes
+rpc = Red Planet Couriers
+piggy bank = Bankroll
+ttw = The Turning Wheel
+sauron = Hunter
+darude = Sand Storm
+hoot = Owl
+piot = Peace in Our Time
+nice car = Sports Hopper
+sweet car = Advanced Concept Hopper
+folding at home = Data Folding
+gun = Unregistered S&W '35
+pistol = Unregistered S&W '35
+catch me if you can = Gingerbread
+twitch.tv = Daily Casts
+hart = Harmony AR Therapy
+tca = The Class Act
+boxer girl = Leela Patel: Trained Pragmatist
+proco = Professional Contacts
+mother brain = Ikawah Project
+hpt = High-Profile Target
+yogurt = Economic Warfare
+doof = Diversion of Funds
+fugu = Puffer
+knock knock = No One Home
+just in time = Compile
+mopus = Magnum Opus
+saccon = Sacrificial Construct
+tb = Tollbooth
+unlearn what you have learned = Reeducation
+loan sharks = Dadiana Chacon
+sodium not potassium = Na'Not'K
+cowabunga = Surfer
+nice moustache = Hernando Cortez
+david blaine = Street Magic
+ares = AR-Enhanced Security
