--- a/cards.ini
+++ b/cards.ini
@@ -27,6 +27,7 @@ white tree = Jinteki: Replicating Perfection
 red tree = Mti Mwekundu: Life Improved
 red black tree = Mti Mwekundu: Life Improved
 babw = Weyland Consortium: Building a Better World
+bwbi = Weyland Consortium: Because We Built It
 neh = Near-Earth Hub: Broadcast Center
 bon = Weyland Consortium: Builder of Nations
 aot = Haas-Bioroid: Architects of Tomorrow
@@ -84,3 +85,29 @@ cowabunga = Surfer
 nice moustache = Hernando Cortez
 david blaine = Street Magic
 ares = AR-Enhanced Security
+gabe = Gabriel Santiago: Consummate Professional
+kit = Rielle "Kit" Peddler: Transhuman
+hsj = High-Stakes Job
+ct = Chaos Theory: Wünderkind
+full metal hacktivist = Edward Kim: Humanity's Hammer
+eddie kim = Edward Kim: Humanity's Hammer
+eddie = Edward Kim: Humanity's Hammer
+eddy = Edward Kim: Humanity's Hammer
+eddy kim = Edward Kim: Humanity's Hammer
+captain hammer = Edward Kim: Humanity's Hammer
+magical girl = Hoshiko Shiro: Untold Protagonist
+mahou shoujo = Hoshiko Shiro: Untold Protagonist
+fisk = Laramy Fisk: Savvy Investor
+los = Los: Data Hijacker
+liza = Liza Talking Thunder: Prominent Legislator
+sil = Silhouette: Stealth Operative
+prof = The Professor: Keeper of Knowledge
+wu = Kabonesa Wu: Netspace Thrillseeker
+little boy = Nathaniel "Gnat" Hall: One-of-a-Kind
+creepy sleepover = Iain Stirling: Retired Spook
+honor student = Hayley Kaplan: Universal Scholar
+ivy league = Hayley Kaplan: Universal Scholar
+shaper bullshit = Record Reconstructor
+rdi = R&D Interface
+hqi = HQ Interface
+tme = The Maker's Eye
