--- a/cards.ini
+++ b/cards.ini
@@ -114,3 +114,5 @@ tme = The Maker's Eye
 pw = Personal Workshop
 lpl = Localized Product Line
 teamspo = Team Sponsorship
+naked man card = Adonis Campaign
+naked man = Adonis Campaign
