Update cards.ini (#12)

--- a/cards.ini
+++ b/cards.ini
@@ -114,4 +114,5 @@ tme = The Maker's Eye
 pw = Personal Workshop
 lpl = Localized Product Line
 teamspo = Team Sponsorship
+ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
