--- a/cards.ini
+++ b/cards.ini
@@ -114,5 +114,7 @@ tme = The Maker's Eye
 pw = Personal Workshop
 lpl = Localized Product Line
 teamspo = Team Sponsorship
+naked man card = Adonis Campaign
+naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
