--- a/cards.ini
+++ b/cards.ini
@@ -118,3 +118,6 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+ken = Ken "Express" Tenma: Disappeared Clone
+express = Ken "Express" Tenma: Disappeared Clone
+old lady = Marilyn Campaign
