--- a/cards.ini
+++ b/cards.ini
@@ -118,3 +118,5 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+seidr = Seidr Laboratories: Destiny Defined
+seidr labs = Seidr Laboratories: Destiny Defined
