--- a/cards.ini
+++ b/cards.ini
@@ -118,3 +118,4 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+lat = Lat: Ethical Freelancer
