Add aliases for Future Perfect / Austerity Policy

--- a/cards.ini
+++ b/cards.ini
@@ -2,6 +2,10 @@
 MaxSearches = 3
 
 [Aliases] # Search is case-insensitive, use the full card name to resolve to.
+tfp = The Future Perfect
+mca = MCA Austerity Policy
+mcaap = MCA Austerity Policy
+emcap = MCA Austerity Policy
 baby = Symmetrical Visage
 the best bot = Jeeves Model Bioroids
 pancakes = Adjusted Chronotype
