--- a/cards.ini
+++ b/cards.ini
@@ -5,6 +5,7 @@ MaxSearches = 3
 tfp = The Future Perfect
 mca = MCA Austerity Policy
 mcaap = MCA Austerity Policy
+mca ap = MCA Austerity Policy
 emcap = MCA Austerity Policy
 baby = Symmetrical Visage
 the best bot = Jeeves Model Bioroids
