--- a/cards.ini
+++ b/cards.ini
@@ -7,6 +7,7 @@ mca = MCA Austerity Policy
 mcaap = MCA Austerity Policy
 mca ap = MCA Austerity Policy
 emcap = MCA Austerity Policy
+wtwb = Watch the World Burn
 baby = Symmetrical Visage
 the best bot = Jeeves Model Bioroids
 pancakes = Adjusted Chronotype
