Update cards.ini (#14)

--- a/cards.ini
+++ b/cards.ini
@@ -118,4 +118,6 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+ken = Ken "Express" Tenma: Disappeared Clone
+old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
