Update cards.ini (#16)
seidr was pulling the Ice, Seidr Adaptive Barrier, and not the ID

--- a/cards.ini
+++ b/cards.ini
@@ -118,6 +118,8 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+seidr = Seidr Laboratories: Destiny Defined
+seidr labs = Seidr Laboratories: Destiny Defined
 ken = Ken "Express" Tenma: Disappeared Clone
 old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
