Update cards.ini (#17)
[[Freedom]] was pulling "the price of freedom" and not the ID

--- a/cards.ini
+++ b/cards.ini
@@ -118,6 +118,7 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+freedom = Freedom Khumalo: Crypto-Anarchist
 seidr = Seidr Laboratories: Destiny Defined
 seidr labs = Seidr Laboratories: Destiny Defined
 ken = Ken "Express" Tenma: Disappeared Clone
