--- a/cards.ini
+++ b/cards.ini
@@ -118,6 +118,7 @@ naked man card = Adonis Campaign
 naked man = Adonis Campaign
 ddm = Deep Data Mining
 wnp = Wireless Net Pavilion
+lat = Lat: Ethical Freelancer
 freedom = Freedom Khumalo: Crypto-Anarchist
 seidr = Seidr Laboratories: Destiny Defined
 seidr labs = Seidr Laboratories: Destiny Defined
