Add aliases for Future Perfect / Austerity Policy (#19)
* Add aliases for Future Perfect / Austerity Policy
* Update cards.ini
* Add wtwb

--- a/cards.ini
+++ b/cards.ini
@@ -2,6 +2,12 @@
 MaxSearches = 3
 
 [Aliases] # Search is case-insensitive, use the full card name to resolve to.
+tfp = The Future Perfect
+mca = MCA Austerity Policy
+mcaap = MCA Austerity Policy
+mca ap = MCA Austerity Policy
+emcap = MCA Austerity Policy
+wtwb = Watch the World Burn
 baby = Symmetrical Visage
 the best bot = Jeeves Model Bioroids
 pancakes = Adjusted Chronotype
