--- a/cards.ini
+++ b/cards.ini
@@ -131,3 +131,4 @@ seidr labs = Seidr Laboratories: Destiny Defined
 ken = Ken "Express" Tenma: Disappeared Clone
 old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
+polop = Political Operative
