--- a/cards.ini
+++ b/cards.ini
@@ -132,3 +132,5 @@ ken = Ken "Express" Tenma: Disappeared Clone
 old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
 polop = Political Operative
+sscg = SanSan City Grid
+astro = AstroScript Pilot Program
