--- a/cards.ini
+++ b/cards.ini
@@ -132,3 +132,4 @@ ken = Ken "Express" Tenma: Disappeared Clone
 old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
 polop = Political Operative
+ppvp = Prepaid VoicePAD
