--- a/cards.ini
+++ b/cards.ini
@@ -133,3 +133,4 @@ old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
 polop = Political Operative
 az = Az McCaffrey: Mechanical Prodigy
+ppvp = Prepaid VoicePAD
