Update cards.ini (#21)
* Update cards.ini
* Update cards.ini

--- a/cards.ini
+++ b/cards.ini
@@ -132,5 +132,7 @@ ken = Ken "Express" Tenma: Disappeared Clone
 old lady = Marilyn Campaign
 sync = SYNC: Everything, Everywhere
 polop = Political Operative
+az = Az McCaffrey: Mechanical Prodigy
+ppvp = Prepaid VoicePAD
 sscg = SanSan City Grid
 astro = AstroScript Pilot Program
