--- a/cards.ini
+++ b/cards.ini
@@ -136,3 +136,5 @@ az = Az McCaffrey: Mechanical Prodigy
 ppvp = Prepaid VoicePAD
 sscg = SanSan City Grid
 astro = AstroScript Pilot Program
+glc = Green Level Clearance
+rlc = Red Level Clearance
