--- a/cards.ini
+++ b/cards.ini
@@ -136,3 +136,4 @@ az = Az McCaffrey: Mechanical Prodigy
 ppvp = Prepaid VoicePAD
 sscg = SanSan City Grid
 astro = AstroScript Pilot Program
+titan = Titan Transnational: Investing In Your Future
