--- a/cards.ini
+++ b/cards.ini
@@ -137,3 +137,6 @@ ppvp = Prepaid VoicePAD
 sscg = SanSan City Grid
 astro = AstroScript Pilot Program
 asa = Asa Group: Security Through Vigilance
+glc = Green Level Clearance
+rlc = Red Level Clearance
+titan = Titan Transnational: Investing In Your Future
