--- a/cards.ini
+++ b/cards.ini
@@ -140,3 +140,5 @@ asa = Asa Group: Security Through Vigilance
 glc = Green Level Clearance
 rlc = Red Level Clearance
 titan = Titan Transnational: Investing In Your Future
+ngo = NGO Front
+dbs = Daily Business Show
