--- a/cards.ini
+++ b/cards.ini
@@ -142,3 +142,4 @@ rlc = Red Level Clearance
 titan = Titan Transnational: Investing In Your Future
 ngo = NGO Front
 dbs = Daily Business Show
+larla = Levy AR Lab Access
