Update cards.ini (#27)
* Update cards.ini

add NGO and DBS

* Update cards.ini

also added larla

--- a/cards.ini
+++ b/cards.ini
@@ -140,3 +140,6 @@ asa = Asa Group: Security Through Vigilance
 glc = Green Level Clearance
 rlc = Red Level Clearance
 titan = Titan Transnational: Investing In Your Future
+ngo = NGO Front
+dbs = Daily Business Show
+larla = Levy AR Lab Access
