--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ multidict==4.7.6
 numpy==1.19.1
 pycparser==2.20
 PyNaCl==1.3.0
+python-Levenshtein==0.12.2
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
