--- a/cards.ini
+++ b/cards.ini
@@ -143,3 +143,4 @@ titan = Titan Transnational: Investing In Your Future
 ngo = NGO Front
 dbs = Daily Business Show
 larla = Levy AR Lab Access
+recoco = Reconstruction Contract
