--- a/cards.ini
+++ b/cards.ini
@@ -144,3 +144,5 @@ ngo = NGO Front
 dbs = Daily Business Show
 larla = Levy AR Lab Access
 recoco = Reconstruction Contract
+eoi = Exchange of Information
+david = D4v1d
