--- a/cards.ini
+++ b/cards.ini
@@ -148,3 +148,8 @@ eoi = Exchange of Information
 david = D4v1d
 car = Sports Hopper
 ed = wyrm
+b2l = Weyland Consortium: Built to Last
+r+ = NBN: Reality Plus
+wolf = René "Loup" Arcemont: Party Animal
+werewolf = René "Loup" Arcemont: Party Animal
+prede = Haas-Bioroid: Precision Design
