Update cards.ini (#28)
* Update cards.ini

added recoco

* Update cards.ini

Added eoi (Exchange of Information) and david = D4v1d

* Update cards.ini

added car

* Update cards.ini

Added ed -> wyrm, for meta server memes

* Update cards.ini

Added aliases for new ID's

--- a/cards.ini
+++ b/cards.ini
@@ -143,3 +143,13 @@ titan = Titan Transnational: Investing In Your Future
 ngo = NGO Front
 dbs = Daily Business Show
 larla = Levy AR Lab Access
+recoco = Reconstruction Contract
+eoi = Exchange of Information
+david = D4v1d
+car = Sports Hopper
+ed = wyrm
+b2l = Weyland Consortium: Built to Last
+r+ = NBN: Reality Plus
+wolf = René "Loup" Arcemont: Party Animal
+werewolf = René "Loup" Arcemont: Party Animal
+prede = Haas-Bioroid: Precision Design
