--- a/cards.ini
+++ b/cards.ini
@@ -153,3 +153,6 @@ r+ = NBN: Reality Plus
 wolf = René "Loup" Arcemont: Party Animal
 werewolf = René "Loup" Arcemont: Party Animal
 prede = Haas-Bioroid: Precision Design
+face kick = Jailbreak
+facekick = Jailbreak
+
