--- a/cards.ini
+++ b/cards.ini
@@ -159,4 +159,5 @@ danb = Near-Earth Hub: Broadcast Center
 uruz = Apex: Invasive Predator
 psycho = Psychographics
 cat = Quantum Predictive Model
+qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
