Update cards.ini (#30)
* Update cards.ini

more memes.  Also cat.

* Update cards.ini

--- a/cards.ini
+++ b/cards.ini
@@ -155,4 +155,9 @@ werewolf = René "Loup" Arcemont: Party Animal
 prede = Haas-Bioroid: Precision Design
 face kick = Jailbreak
 facekick = Jailbreak
-
+danb = Near-Earth Hub: Broadcast Center
+uruz = Apex: Invasive Predator
+psycho = Psychographics
+cat = Quantum Predictive Model
+qpm = Quantum Predictive Model
+deezymeezy = DZMZ Optimizer
