--- a/cards.ini
+++ b/cards.ini
@@ -161,3 +161,4 @@ psycho = Psychographics
 cat = Quantum Predictive Model
 qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
+cbg = Commercial Bankers Group
