--- a/cards.ini
+++ b/cards.ini
@@ -162,3 +162,4 @@ cat = Quantum Predictive Model
 qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
 cbg = Commercial Bankers Group
+julybug = Urtica Cipher
