--- a/cards.ini
+++ b/cards.ini
@@ -163,3 +163,6 @@ qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
 cbg = Commercial Bankers Group
 julybug = Urtica Cipher
+retrun = Retrieval Run
+trash panda = Retrieval Run
+trashpanda = Retrieval Run
