--- a/cards.ini
+++ b/cards.ini
@@ -166,3 +166,4 @@ julybug = Urtica Cipher
 retrun = Retrieval Run
 trash panda = Retrieval Run
 trashpanda = Retrieval Run
+beth = Beth Kilrain-Chang
