Update cards.ini (#34)
* Update cards.ini

* Update cards.ini

2 aliases for Retrieval Run
retrun
trash panda

* Update cards.ini

added Beth

--- a/cards.ini
+++ b/cards.ini
@@ -162,3 +162,8 @@ cat = Quantum Predictive Model
 qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
 cbg = Commercial Bankers Group
+julybug = Urtica Cipher
+retrun = Retrieval Run
+trash panda = Retrieval Run
+trashpanda = Retrieval Run
+beth = Beth Kilrain-Chang
