--- a/cards.ini
+++ b/cards.ini
@@ -167,3 +167,6 @@ retrun = Retrieval Run
 trash panda = Retrieval Run
 trashpanda = Retrieval Run
 beth = Beth Kilrain-Chang
+grndl = GRNDL: Power Unleashed
+slimhack = Overclock
+desperadito = Penny Shaver
