--- a/cards.ini
+++ b/cards.ini
@@ -170,3 +170,5 @@ beth = Beth Kilrain-Chang
 grndl = GRNDL: Power Unleashed
 slimhack = Overclock
 desperadito = Penny Shaver
+mirrormorph = MirrorMorph: Endless Iteration
+mm = MirrorMorph: Endless Iteration
