--- a/cards.ini
+++ b/cards.ini
@@ -169,6 +169,6 @@ trashpanda = Retrieval Run
 beth = Beth Kilrain-Chang
 grndl = GRNDL: Power Unleashed
 slimhack = Overclock
-desperadito = Penny Shaver
+desperadito = Pennyshaver
 mirrormorph = MirrorMorph: Endless Iteration
 mm = MirrorMorph: Endless Iteration
