--- a/cards.ini
+++ b/cards.ini
@@ -172,3 +172,4 @@ slimhack = Overclock
 desperadito = Pennyshaver
 mirrormorph = MirrorMorph: Endless Iteration
 mm = MirrorMorph: Endless Iteration
+vlc = Violet Level Clearance
