Update cards.ini (#35)
* Update cards.ini

grndl was pulling GRNDL Refinery, not the ID.

Also two new nicknames for Gateway cards that I think are cute and want to make Be A Thing

* Update cards.ini

Added Mirrormorph/mm, point to ID

* Update cards.ini

* Update cards.ini

add vlc

--- a/cards.ini
+++ b/cards.ini
@@ -167,3 +167,9 @@ retrun = Retrieval Run
 trash panda = Retrieval Run
 trashpanda = Retrieval Run
 beth = Beth Kilrain-Chang
+grndl = GRNDL: Power Unleashed
+slimhack = Overclock
+desperadito = Pennyshaver
+mirrormorph = MirrorMorph: Endless Iteration
+mm = MirrorMorph: Endless Iteration
+vlc = Violet Level Clearance
