--- a/cards.ini
+++ b/cards.ini
@@ -173,3 +173,5 @@ desperadito = Pennyshaver
 mirrormorph = MirrorMorph: Endless Iteration
 mm = MirrorMorph: Endless Iteration
 vlc = Violet Level Clearance
+fao = Forged Activation Orders
+bbg = Breaker Bay Grid
