--- a/cards.ini
+++ b/cards.ini
@@ -161,6 +161,7 @@ psycho = Psychographics
 cat = Quantum Predictive Model
 qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
+deezy meezy = DZMZ Optimizer
 cbg = Commercial Bankers Group
 julybug = Urtica Cipher
 retrun = Retrieval Run
