--- a/cards.ini
+++ b/cards.ini
@@ -176,3 +176,5 @@ mm = MirrorMorph: Endless Iteration
 vlc = Violet Level Clearance
 fao = Forged Activation Orders
 bbg = Breaker Bay Grid
+blorch = Black Orchestra
+blorc = Black Orchestra
