Update cards.ini (#36)
* Update cards.ini

added
fao = Forged Activation Orders
bbg = Breaker Bay Grid

* Update cards.ini

added deezy meezy, already have deezymeezy

* Update cards.ini

Added black orchestra

--- a/cards.ini
+++ b/cards.ini
@@ -161,6 +161,7 @@ psycho = Psychographics
 cat = Quantum Predictive Model
 qpm = Quantum Predictive Model
 deezymeezy = DZMZ Optimizer
+deezy meezy = DZMZ Optimizer
 cbg = Commercial Bankers Group
 julybug = Urtica Cipher
 retrun = Retrieval Run
@@ -173,3 +174,7 @@ desperadito = Pennyshaver
 mirrormorph = MirrorMorph: Endless Iteration
 mm = MirrorMorph: Endless Iteration
 vlc = Violet Level Clearance
+fao = Forged Activation Orders
+bbg = Breaker Bay Grid
+blorch = Black Orchestra
+blorc = Black Orchestra
