--- a/cards.ini
+++ b/cards.ini
@@ -178,3 +178,4 @@ fao = Forged Activation Orders
 bbg = Breaker Bay Grid
 blorch = Black Orchestra
 blorc = Black Orchestra
+mac = Kate "Mac" McCaffrey: Digital Tinker
