--- a/cards.ini
+++ b/cards.ini
@@ -179,3 +179,5 @@ bbg = Breaker Bay Grid
 blorch = Black Orchestra
 blorc = Black Orchestra
 mac = Kate "Mac" McCaffrey: Digital Tinker
+tpr = Timely Public Release
+argus = Argus Security: Protection Guaranteed
