--- a/cards.ini
+++ b/cards.ini
@@ -149,6 +149,7 @@ david = D4v1d
 car = Sports Hopper
 ed = wyrm
 b2l = Weyland Consortium: Built to Last
+btl = Weyland Consortium: Built to Last
 r+ = NBN: Reality Plus
 wolf = René "Loup" Arcemont: Party Animal
 werewolf = René "Loup" Arcemont: Party Animal
