--- a/cards.ini
+++ b/cards.ini
@@ -183,3 +183,4 @@ mac = Kate "Mac" McCaffrey: Digital Tinker
 tpr = Timely Public Release
 argus = Argus Security: Protection Guaranteed
 lady = Cerberus "Lady" H1
+sva = Salvaged Vanadis Armory
