--- a/cards.ini
+++ b/cards.ini
@@ -184,3 +184,4 @@ tpr = Timely Public Release
 argus = Argus Security: Protection Guaranteed
 lady = Cerberus "Lady" H1
 sva = Salvaged Vanadis Armory
+midseasons = Midseason Replacements
