--- a/cards.ini
+++ b/cards.ini
@@ -185,3 +185,4 @@ argus = Argus Security: Protection Guaranteed
 lady = Cerberus "Lady" H1
 sva = Salvaged Vanadis Armory
 midseasons = Midseason Replacements
+sft = Shipment from Tennin
