--- a/cards.ini
+++ b/cards.ini
@@ -182,3 +182,7 @@ blorc = Black Orchestra
 mac = Kate "Mac" McCaffrey: Digital Tinker
 tpr = Timely Public Release
 argus = Argus Security: Protection Guaranteed
+lady = Cerberus "Lady" H1
+sva = Salvaged Vanadis Armory
+midseasons = Midseason Replacements
+sft = Shipment from Tennin
