--- a/cards.ini
+++ b/cards.ini
@@ -187,3 +187,4 @@ sva = Salvaged Vanadis Armory
 midseasons = Midseason Replacements
 sft = Shipment from Tennin
 sso = SSO Industries: Fueling Innovation
+hyoubu = Hyoubu Institute: Absolute Clarity
