--- a/cards.ini
+++ b/cards.ini
@@ -188,3 +188,4 @@ midseasons = Midseason Replacements
 sft = Shipment from Tennin
 sso = SSO Industries: Fueling Innovation
 hyoubu = Hyoubu Institute: Absolute Clarity
+palana = Pālanā Foods: Sustainable Growth
