--- a/cards.ini
+++ b/cards.ini
@@ -186,3 +186,4 @@ lady = Cerberus "Lady" H1
 sva = Salvaged Vanadis Armory
 midseasons = Midseason Replacements
 sft = Shipment from Tennin
+steelskin = I've Had Worse
