--- a/cards.ini
+++ b/cards.ini
@@ -189,3 +189,4 @@ sft = Shipment from Tennin
 sso = SSO Industries: Fueling Innovation
 hyoubu = Hyoubu Institute: Absolute Clarity
 palana = Pālanā Foods: Sustainable Growth
+anarchomushroom = Gagarin Deep Space: Expanding the Horizon
