--- a/cards.ini
+++ b/cards.ini
@@ -190,3 +190,4 @@ sso = SSO Industries: Fueling Innovation
 hyoubu = Hyoubu Institute: Absolute Clarity
 palana = Pālanā Foods: Sustainable Growth
 anarchomushroom = Gagarin Deep Space: Expanding the Horizon
+squirtle = aumakua
